Fix button alignment.

--- a/app/assets/stylesheets/arbor_reloaded/_project_dashboard.scss
+++ b/app/assets/stylesheets/arbor_reloaded/_project_dashboard.scss
@@ -137,7 +137,7 @@
       @include translateY(0);
       color: $white;
       font-size: rem-calc(10);
-      line-height: rem-calc(54);
+      line-height: rem-calc(51);
       margin: 0;
       top: 0;
     }
